--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kdesdk-strigi-analyzers (4:4.11.3-1) UNRELEASED; urgency=low
+kdesdk-strigi-analyzers (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
   * Update build dependencies.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 08 Nov 2013 18:37:49 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 09 Nov 2013 14:25:42 +0100
 
 kdesdk-strigi-analyzers (4:4.11.2-1) experimental; urgency=low
 
