--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdesdk-strigi-analyzers (4:4.11.3-2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 03 Feb 2014 18:00:47 +0100
+
 kdesdk-strigi-analyzers (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
