--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 kdesdk-strigi-analyzers (4:4.11.3-2) UNRELEASED; urgency=medium
 
-  * 
+  * Bump Standards-Version to 3.9.5, no changes needed.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 03 Feb 2014 18:00:47 +0100
 
