--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kdesdk-strigi-analyzers (4:4.11.3-2) UNRELEASED; urgency=medium
+kdesdk-strigi-analyzers (4:4.11.3-2) unstable; urgency=medium
 
   * Bump Standards-Version to 3.9.5, no changes needed.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 03 Feb 2014 18:00:47 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 03 Apr 2014 11:21:00 +0200
 
 kdesdk-strigi-analyzers (4:4.11.3-1) unstable; urgency=low
 
