--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,129 @@
+kdesdk-strigi-analyzers (4:14.11.95-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Initial release for KDE applications 14.12 series 
+   - Change maintainer to Debian/Kubuntu
+   - Fix Watch file applications locations 
+   - Fix VCS for new kde-applications location
+  * Debian merge, remaining changes: 
+   - Keep dbg package
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 25 Nov 2014 02:06:08 +0000
+
+kdesdk-strigi-analyzers (4:4.14.2-0ubuntu1) vivid; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Oct 2014 04:46:57 -0700
+
+kdesdk-strigi-analyzers (4:4.14.1-0ubuntu1) utopic; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Mon, 22 Sep 2014 17:07:29 +0200
+
+kdesdk-strigi-analyzers (4:4.14.0-0ubuntu1) utopic; urgency=medium
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 20 Aug 2014 12:49:50 +0200
+
+kdesdk-strigi-analyzers (4:4.13.97-0ubuntu1) utopic; urgency=medium
+
+  * New upstream beta release RC
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Fri, 01 Aug 2014 16:37:22 +0200
+
+kdesdk-strigi-analyzers (4:4.13.95-0ubuntu1) utopic; urgency=medium
+
+  * New upstream beta release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Wed, 30 Jul 2014 18:07:51 +0200
+
+kdesdk-strigi-analyzers (4:4.13.90-0ubuntu1) utopic; urgency=medium
+
+  * New upstream beta release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Thu, 24 Jul 2014 23:02:42 +0200
+
+kdesdk-strigi-analyzers (4:4.13.2-0ubuntu1) utopic; urgency=medium
+
+  * new upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 18 Jun 2014 11:54:26 +0100
+
+kdesdk-strigi-analyzers (4:4.13.0-0ubuntu2) utopic; urgency=medium
+
+  * Merge with debian, remaining changes
+    - Keep debug package
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Wed, 11 Jun 2014 19:18:02 +0200
+
+kdesdk-strigi-analyzers (4:4.13.0-0ubuntu1) trusty; urgency=medium
+
+  * New upstream KDE Software Compilation release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 10 Apr 2014 21:57:59 +0100
+
+kdesdk-strigi-analyzers (4:4.12.97-0ubuntu1) trusty; urgency=medium
+
+  * New upstream release candidate
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Wed, 02 Apr 2014 11:22:31 +0200
+
+kdesdk-strigi-analyzers (4:4.12.95-0ubuntu1) trusty; urgency=medium
+
+  * New upstream beta release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Sun, 23 Mar 2014 12:24:00 +0100
+
+kdesdk-strigi-analyzers (4:4.12.90-0ubuntu1) trusty; urgency=medium
+
+  * New upstream beta release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 19 Mar 2014 10:52:17 +0000
+
+kdesdk-strigi-analyzers (4:4.12.3-0ubuntu1) trusty; urgency=medium
+
+  * New upstream bugfix release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Tue, 04 Mar 2014 20:44:11 +0100
+
+kdesdk-strigi-analyzers (4:4.12.2-0ubuntu1) trusty; urgency=medium
+
+  * New upstream bugfix release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Tue, 04 Feb 2014 23:54:19 +0000
+
+kdesdk-strigi-analyzers (4:4.12.1-0ubuntu1) trusty; urgency=low
+
+  * New upstream bugfix release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 16 Jan 2014 08:12:29 +0000
+
+kdesdk-strigi-analyzers (4:4.12.0-0ubuntu1) trusty; urgency=low
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 18 Dec 2013 16:53:28 +0000
+
+kdesdk-strigi-analyzers (4:4.11.97-0ubuntu1) trusty; urgency=low
+
+  * New upstream RC release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 29 Nov 2013 13:04:04 +0000
+
+kdesdk-strigi-analyzers (4:4.11.95-0ubuntu1) trusty; urgency=low
+
+  * New upstream beta release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Mon, 25 Nov 2013 17:59:44 +0100
+
+kdesdk-strigi-analyzers (4:4.11.80-0ubuntu1) trusty; urgency=low
+
+  * New upstream beta release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Sat, 23 Nov 2013 17:38:16 +0100
+
 kdesdk-strigi-analyzers (4:4.11.3-2) unstable; urgency=medium
 
   * Bump Standards-Version to 3.9.5, no changes needed.
@@ -16,3 +142,56 @@ kdesdk-strigi-analyzers (4:4.11.2-1) experimental; urgency=low
   * First release of kdesdk after being split by upstream.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 08 Oct 2013 10:58:30 +0200
+
+kdesdk-strigi-analyzers (4:4.11.2-0ubuntu1) saucy; urgency=low
+
+  * New upstream bugfix release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 30 Sep 2013 14:22:00 +0100
+
+kdesdk-strigi-analyzers (4:4.11.1-0ubuntu1) saucy; urgency=low
+
+  * New upstream bugfix release.
+
+ -- Howard Chan <smartboyhw@gmail.com>  Fri, 06 Sep 2013 22:20:54 +0100
+
+kdesdk-strigi-analyzers (4:4.11.0-0ubuntu1) saucy; urgency=low
+
+  [ Howard Chan ]
+  * New upstream release
+
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 14 Aug 2013 00:12:52 +0100
+
+kdesdk-strigi-analyzers (4:4.10.97-0ubuntu1) saucy; urgency=low
+
+  * New upstream RC 2 release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 26 Jul 2013 19:31:08 +0100
+
+kdesdk-strigi-analyzers (4:4.10.95-0ubuntu1) saucy; urgency=low
+
+  * New upstream RC release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Fri, 19 Jul 2013 12:32:19 +0000
+
+kdesdk-strigi-analyzers (4:4.10.90-0ubuntu1) saucy; urgency=low
+
+  * New upstream bet release
+
+ -- Michał Zając <quintasan@kubuntu.org>  Fri, 28 Jun 2013 18:11:39 +0100
+
+kdesdk-strigi-analyzers (4:4.10.80-0ubuntu1) saucy; urgency=low
+
+  [ Jonathan Riddell ]
+  * New upstream release
+  * Initial package, split from kdesdk-strigi-analyzers
+
+  [ Michał Zając ]
+  * Add pkg-confg to Build-Depends
+  * Add libstreamanalyzer-dev to Build-Depends
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 19 Jun 2013 16:33:25 +0100
+
