--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-kdesdk-strigi-analyzers (4:14.11.95-0ubuntu1) UNRELEASED; urgency=medium
+kdesdk-strigi-analyzers (4:14.11.97-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release candidate
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 02 Dec 2014 10:42:32 -0800
+
+kdesdk-strigi-analyzers (4:14.11.95-0ubuntu1) vivid; urgency=medium
 
   * Initial release for KDE applications 14.12 series 
    - Change maintainer to Debian/Kubuntu
