--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kdesdk-strigi-analyzers (4:15.04.0-0ubuntu1) UNRELEASED; urgency=medium
+kdesdk-strigi-analyzers (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * wrap-and-sort 
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 15 Apr 2015 14:23:18 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 21:50:40 -0700
 
 kdesdk-strigi-analyzers (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
