At some point we lost the main plugins package. Restoring that.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ kdesdk-strigi-analyzers (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
   * wrap-and-sort 
+  * At some point we lost the main plugins package.
+    Restoring that. 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 21:50:40 -0700
 
