New upstream release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
-kdesdk-strigi-analyzers (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
+kdesdk-strigi-analyzers (4:15.04.2-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * New upstream release
   * wrap-and-sort 
   * At some point we lost the main plugins package.
     Restoring that. 
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 21:50:40 -0700
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 06 Jun 2015 01:22:03 +0200
 
 kdesdk-strigi-analyzers (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
