--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kdesdk-strigi-analyzers (4:15.04.2-0ubuntu1) UNRELEASED; urgency=medium
+kdesdk-strigi-analyzers (4:15.04.2-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
   * New upstream release
@@ -9,7 +9,7 @@ kdesdk-strigi-analyzers (4:15.04.2-0ubuntu1) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 06 Jun 2015 01:22:03 +0200
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 09 Jun 2015 18:56:31 +0200
 
 kdesdk-strigi-analyzers (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
