--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdesdk-strigi-analyzers (4:15.07.90-0ubuntu1) UNRELEASED; urgency=medium
+
+  * new upstream beta release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 13 Aug 2015 11:12:01 +0100
+
 kdesdk-strigi-analyzers (4:15.04.2-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
