--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kdesdk-strigi-analyzers (4:15.08.2-0ubuntu1) UNRELEASED; urgency=medium
+kdesdk-strigi-analyzers (4:15.08.2-0ubuntu1) wily; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 09 Oct 2015 14:04:29 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 14 Oct 2015 12:22:15 +0100
 
 kdesdk-strigi-analyzers (4:15.08.1-0ubuntu1) wily; urgency=medium
 
