--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kdesdk-strigi-analyzers (4:15.12.1-0ubuntu1) UNRELEASED; urgency=medium
+kdesdk-strigi-analyzers (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
   [ Clive Johnston ]
   * New upstream release
@@ -7,7 +7,7 @@ kdesdk-strigi-analyzers (4:15.12.1-0ubuntu1) UNRELEASED; urgency=medium
   * Debian merge: No remaining changes.
   * New upstream release. 
 
- -- Clive Johnston <clivejo@aol.com>  Sat, 02 Jan 2016 13:49:57 +0000
+ -- Clive Johnston <clivejo@aol.com>  Wed, 09 Mar 2016 10:40:55 +0100
 
 kdesdk-strigi-analyzers (4:15.08.2-0ubuntu1) wily; urgency=medium
 
